<resources>
    <string name="app_name"></string>
    <string name="str_login">LOGIN</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_register">Register</string>
    <string name="str_today">Today</string>
    <string name="str_inbox">Inbox</string>
    <string name="str_next_days">Next Days</string>
    <string name="str_title_labels">Labels</string>
    <string name="str_add_label">Add Label</string>
    <string name="str_label_name">Label Name</string>
    <string name="str_select_a_color">Select a Color</string>
    <string name="str_color_label">Color:</string>

    <!--temp-->
    <string-array name="labelsTest">
        <item>Inbox</item>
        <item>Home</item>
        <item>Work</item>
        <item>Study</item>
        <item>Vacation</item>
        <item>Personal Project</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_done">Done</string>
</resources>
