<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tlbHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:elevation="6dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/AppTheme"
        />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tlbHome"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:tabBackground="@color/colorPrimaryDark"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="@color/colorPrimaryLight">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemInbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/str_inbox" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/str_today" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemNextDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/str_next_days" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/str_done" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vwPager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tabLayout"
        />

</RelativeLayout>