<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/lblDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:padding="6dp"
        android:text="@string/str_add_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgIconLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgIconLabel"
        android:layout_width="49dp"
        android:layout_height="43dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_label_list"
        tools:srcCompat="@drawable/ic_action_label_list" />

    <EditText
        android:id="@+id/txtLabelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/str_label_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDialogTitle" />

    <Button
        android:id="@+id/btnAddLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/roboto"
        android:padding="10dp"
        android:text="@string/str_add_label"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnColorPicker" />

    <Button
        android:id="@+id/btnColorPicker"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/roboto"
        android:padding="10dp"
        android:text="@string/str_select_a_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelName" />

    <TextView
        android:id="@+id/lblColorPicked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:padding="12dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblColorSelectedLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelName" />

    <TextView
        android:id="@+id/lblColorSelectedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:padding="12dp"
        android:text="@string/str_color_label"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnColorPicker"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelName" />

</android.support.constraint.ConstraintLayout>