<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="428dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:text="@string/str_login"
        android:textColor="#FFF"
        android:textColorLink="#FFF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="133dp"
        android:foregroundGravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:foregroundGravity="center_horizontal"
        android:hint="@string/str_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFF"
        android:textColorHint="#CFD8DC"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:foregroundGravity="center_horizontal"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#CFD8DC"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="142dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:foregroundGravity="center_horizontal"
        android:text="@string/str_login"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="154dp"
        android:fontFamily="@font/roboto"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:linksClickable="true"
        android:text="@string/str_register"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</android.support.constraint.ConstraintLayout>